# riddleBot

./: .gitignore  README.md  example_event.json  manifest.yaml  pyproject.toml  riddles.txt
approveEndpoint/: lambda_function.py
getScoreBoard/: lambda_function.py
getScoreBoard/slack_sdk-3.20.0.dist-info/: RECORD
riddler/: lambda_function.py  riddle_map.py
riddler/slack/: __init__.py
riddler/slack/rtm/: __init__.py  client.py
riddler/slack/web/: __init__.py  async_base_client.py  async_client.py  async_slack_response.py  base_client.py  client.py  internal_utils.py  slack_response.py
riddler/slack/webhook/: async_client.py  client.py  internal_utils.py
riddler/slack_sdk/: __init__.py
riddler/slack_sdk-3.20.0.dist-info/: RECORD
riddler/slack_sdk/audit_logs/v1/: async_client.py  client.py  internal_utils.py
riddler/slack_sdk/http_retry/: __init__.py
riddler/slack_sdk/models/blocks/: __init__.py  block_elements.py  blocks.py
riddler/slack_sdk/oauth/: __init__.py
riddler/slack_sdk/oauth/state_store/: __init__.py
riddler/slack_sdk/oauth/token_rotation/: async_rotator.py
riddler/slack_sdk/rtm/: __init__.py
riddler/slack_sdk/rtm_v2/: __init__.py
riddler/slack_sdk/scim/: __init__.py
riddler/slack_sdk/socket_mode/: async_client.py  client.py
riddler/slack_sdk/web/: async_internal_utils.py  client.py  legacy_client.py
riddler/slack_sdk/webhook/: async_client.py  client.py  internal_utils.py
tests/: test.py  test_utils.py
validator/: db_client.py  guess.py  lambda_function.py  slack_client.py  user.py  util.py  vars.py
(+15 files in other folders)
