[tool.poetry]
name = "paaskebot"
version = "0.1.0"
description = ""
authors = ["maur1 <maureen@live.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tomark = "^0.1.4"
pytz = "^2022.7.1"
boto3 = "^1.26.96"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

